// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Layout : Header renders correctly 1`] = `
Array [
  <a
    data-reach-skip-link=""
    data-reach-skip-nav-link=""
    href="#reach-skip-nav"
  >
    Skip site navigation
  </a>,
  <header
    className="site-header siteHeader"
  >
    <div
      className="container container"
    >
      <div
        className=""
        style={
          Object {
            "height": 0,
            "opacity": 0,
            "overflow": "hidden",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="mobileMenu"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            className="mobileSearchContainer"
          >
            <div
              className="search"
              onBlur={[Function]}
            >
              <div
                data-reach-combobox=""
              >
                <input
                  aria-autocomplete="both"
                  aria-controls="listbox--1"
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  autoComplete="off"
                  className="searchInput"
                  data-reach-combobox-input=""
                  id="header-search-autocomplete-mobile"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex="-1"
                  value=""
                />
                <label
                  className="searchLabel"
                  htmlFor="header-search-autocomplete-mobile"
                >
                  Search
                </label>
              </div>
              <button
                aria-label="Submit search"
                className="searchSubmit"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="test-file-stub"
                />
              </button>
            </div>
          </div>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className="mobile"
              role="menubar"
            >
              <li
                className="menuItem"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--1"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu"
                    className="subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--1"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
          <a
            className="getInvolved"
            href="/contact/volunteer"
          >
            Get Involved
          </a>
          <div
            className="mobilePointer"
          />
        </div>
      </div>
      <div
        className=""
        style={
          Object {
            "background": "colorPlum800",
            "height": "auto",
            "opacity": 1,
            "overflow": "unset",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="banner"
        >
          <span
            className="new"
          >
            New
          </span>
           
          <a
            href="/race"
            onClick={[Function]}
          >
            We just launched the COVID Racial Data Tracker
          </a>
        </div>
      </div>
      <div
        className="wrapper"
      >
        <div
          className="siteTitleContainer"
        >
          <div
            className="siteTitleInner"
          >
            <a
              className="projectLogo"
              href="/"
            >
              <img
                alt="The COVID Tracking Project"
                src="test-file-stub"
                width="176px"
              />
            </a>
          </div>
          <div
            className="navContainer"
          >
            <button
              aria-expanded={false}
              className="mobileToggle"
              onClick={[Function]}
              type="button"
            >
              Menu
            </button>
            <nav
              className="js-disabled-block"
              role="navigation"
            >
              <ul
                aria-label="Main"
                className=""
                role="menubar"
              >
                <li
                  className="menuItem"
                >
                  <div
                    className="navLabel"
                  >
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                    <button
                      aria-controls="menu--3"
                      aria-haspopup={true}
                      className="caret"
                      data-reach-menu-button=""
                      id="menu-button--menu"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        fill="none"
                        height="7"
                        viewBox="0 0 12 7"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                        />
                      </svg>
                      <span
                        className="a11y-only"
                      >
                        show menu for 
                        Test A
                      </span>
                    </button>
                  </div>
                  <div
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    hidden={true}
                  >
                    <div
                      aria-labelledby="menu-button--menu"
                      className="subMenu"
                      data-reach-menu-items=""
                      data-reach-menu-list=""
                      id="menu--3"
                      onKeyDown={[Function]}
                      tabIndex={-1}
                    >
                      <div
                        role="none"
                        tabIndex={-1}
                      >
                        <a
                          className="menuLink"
                          data-reach-menu-item=""
                          data-reach-menu-link=""
                          data-selected=""
                          data-valuetext=""
                          href="/contentful-a"
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseMove={[Function]}
                          onMouseUp={[Function]}
                          role="menuitem"
                          tabIndex={-1}
                        >
                          Contentful a
                        </a>
                      </div>
                      <div
                        role="none"
                        tabIndex={-1}
                      >
                        <a
                          className="menuLink"
                          data-reach-menu-item=""
                          data-reach-menu-link=""
                          data-selected=""
                          data-valuetext=""
                          href="/contentful-b"
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseMove={[Function]}
                          onMouseUp={[Function]}
                          role="menuitem"
                          tabIndex={-1}
                        >
                          Contentful B
                        </a>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  className="menuItem"
                >
                  <div
                    className="navLabel"
                  >
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="tools"
          >
            <div
              className="searchContainer"
            >
              <div
                className="search"
                onBlur={[Function]}
              >
                <div
                  data-reach-combobox=""
                >
                  <input
                    aria-autocomplete="both"
                    aria-controls="listbox--2"
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    autoComplete="off"
                    className="searchInput"
                    data-reach-combobox-input=""
                    id="header-search-autocomplete"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="combobox"
                    tabIndex="-1"
                    value=""
                  />
                  <label
                    className="searchLabel"
                    htmlFor="header-search-autocomplete"
                  >
                    Search
                  </label>
                </div>
                <button
                  aria-label="Submit search"
                  className="searchSubmit"
                  onClick={[Function]}
                  type="button"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="test-file-stub"
                  />
                </button>
              </div>
            </div>
            <a
              className="getInvolved"
              href="/contact/volunteer"
            >
              Get involved
            </a>
          </div>
        </div>
        <div
          className="atlanticBanner"
        >
          <span>
            At
          </span>
           
          <img
            alt="The Atlantic"
            src="test-file-stub"
          />
          <div />
        </div>
      </div>
      <div
        className="container container"
      >
        <div
          className="full"
        >
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle"
              >
                Sample title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>,
  <main
    id="main"
  >
    <div
      data-reach-skip-nav-content=""
      id="reach-skip-nav"
    />
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <p>
          Content
        </p>
      </div>
    </div>
  </main>,
  <footer
    className="wrapper"
  >
    <div
      className="footer"
    >
      <div
        className="main"
      >
        <a
          className="ctpLogo"
          href="/"
        >
          <img
            alt="The COVID Tracking Project"
            className="projectLogo"
            src="test-file-stub"
          />
        </a>
        <div
          className="links"
        >
          <ul
            className="footerList"
          >
            <li>
              <a
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li>
              <a
                href="/terms-and-conditions"
              >
                Terms and Conditions
              </a>
            </li>
            <li>
              <a
                href="/about-data/license"
              >
                License
              </a>
            </li>
            <li>
              <a
                href="https://www.theatlantic.com/privacy-policy/"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                href="/about/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li>
              <a
                href="/rss.xml"
              >
                RSS
              </a>
            </li>
          </ul>
        </div>
        <ul
          className="social"
        >
          <li>
            <a
              href="https://github.com/COVID19Tracking"
            >
              <img
                alt="GitHub"
                src="test-file-stub"
              />
            </a>
          </li>
          <li>
            <a
              href="https://twitter.com/COVID19Tracking"
            >
              <img
                alt="Twitter"
                src="test-file-stub"
              />
            </a>
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="divider"
    />
    <div
      className="copyright"
    >
      <span>
        CovidTracking.com Copyright © 
        2020
         by The Atlantic Monthly Group. 
        <a
          href="/license"
        >
          (CC BY-NC 4.0)
        </a>
      </span>
      <a
        className="backToTop"
        href="#reach-skip-nav"
      >
        <span>
          Back to top
        </span>
        <img
          alt=""
          aria-hidden={true}
          src="test-file-stub"
        />
      </a>
    </div>
  </footer>,
]
`;

exports[`Components : Layout : Header renders correctly 2`] = `
Array [
  <a
    data-reach-skip-link=""
    data-reach-skip-nav-link=""
    href="#reach-skip-nav"
  >
    Skip site navigation
  </a>,
  <header
    className="site-header siteHeader"
  >
    <div
      className="container container"
    >
      <div
        className=""
        style={
          Object {
            "height": 0,
            "opacity": 0,
            "overflow": "hidden",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="mobileMenu"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            className="mobileSearchContainer"
          >
            <div
              className="search"
              onBlur={[Function]}
            >
              <div
                data-reach-combobox=""
              >
                <input
                  aria-autocomplete="both"
                  aria-controls="listbox--5"
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  autoComplete="off"
                  className="searchInput"
                  data-reach-combobox-input=""
                  id="header-search-autocomplete-mobile"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  role="combobox"
                  tabIndex="-1"
                  value=""
                />
                <label
                  className="searchLabel"
                  htmlFor="header-search-autocomplete-mobile"
                >
                  Search
                </label>
              </div>
              <button
                aria-label="Submit search"
                className="searchSubmit"
                onClick={[Function]}
                type="button"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="test-file-stub"
                />
              </button>
            </div>
          </div>
          <nav
            className="js-disabled-block"
            role="navigation"
          >
            <ul
              aria-label="Main"
              className="mobile"
              role="menubar"
            >
              <li
                className="menuItem"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-a"
                  >
                    Test A
                  </a>
                  <button
                    aria-controls="menu--9"
                    aria-haspopup={true}
                    className="caret"
                    data-reach-menu-button=""
                    id="menu-button--menu--9"
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      height="7"
                      viewBox="0 0 12 7"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                      />
                    </svg>
                    <span
                      className="a11y-only"
                    >
                      show menu for 
                      Test A
                    </span>
                  </button>
                </div>
                <div
                  data-reach-menu=""
                  data-reach-menu-popover=""
                  hidden={true}
                >
                  <div
                    aria-labelledby="menu-button--menu--9"
                    className="subMenu"
                    data-reach-menu-items=""
                    data-reach-menu-list=""
                    id="menu--9"
                    onKeyDown={[Function]}
                    tabIndex={-1}
                  >
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-a"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful a
                      </a>
                    </div>
                    <div
                      role="none"
                      tabIndex={-1}
                    >
                      <a
                        className="menuLink"
                        data-reach-menu-item=""
                        data-reach-menu-link=""
                        data-selected=""
                        data-valuetext=""
                        href="/contentful-b"
                        onClick={[Function]}
                        onDragStart={[Function]}
                        onMouseDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        onMouseMove={[Function]}
                        onMouseUp={[Function]}
                        role="menuitem"
                        tabIndex={-1}
                      >
                        Contentful B
                      </a>
                    </div>
                  </div>
                </div>
              </li>
              <li
                className="menuItem"
              >
                <div
                  className="navLabel"
                >
                  <a
                    href="/test-b"
                  >
                    Test B
                  </a>
                </div>
              </li>
            </ul>
          </nav>
          <a
            className="getInvolved"
            href="/contact/volunteer"
          >
            Get Involved
          </a>
          <div
            className="mobilePointer"
          />
        </div>
      </div>
      <div
        className=""
        style={
          Object {
            "background": "colorPlum800",
            "height": "auto",
            "opacity": 1,
            "overflow": "unset",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="banner"
        >
          <span
            className="new"
          >
            New
          </span>
           
          <a
            href="/race"
            onClick={[Function]}
          >
            We just launched the COVID Racial Data Tracker
          </a>
        </div>
      </div>
      <div
        className="wrapper"
      >
        <div
          className="siteTitleContainer"
        >
          <div
            className="siteTitleInner"
          >
            <a
              className="projectLogo"
              href="/"
            >
              <img
                alt="The COVID Tracking Project"
                src="test-file-stub"
                width="176px"
              />
            </a>
          </div>
          <div
            className="navContainer"
          >
            <button
              aria-expanded={false}
              className="mobileToggle"
              onClick={[Function]}
              type="button"
            >
              Menu
            </button>
            <nav
              className="js-disabled-block"
              role="navigation"
            >
              <ul
                aria-label="Main"
                className=""
                role="menubar"
              >
                <li
                  className="menuItem"
                >
                  <div
                    className="navLabel"
                  >
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                    <button
                      aria-controls="menu--11"
                      aria-haspopup={true}
                      className="caret"
                      data-reach-menu-button=""
                      id="menu-button--menu--11"
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        fill="none"
                        height="7"
                        viewBox="0 0 12 7"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.59523 6.56387C5.7446 6.71053 5.91203 6.7381 6.0001 6.7381C6.09838 6.7381 6.25421 6.71136 6.40443 6.56387L10.9015 1.76778C11.1074 1.5483 11.093 1.20669 10.8695 1.00471C10.6459 0.802637 10.298 0.817297 10.0924 1.03625L5.99993 5.40006L1.90754 1.03625C1.70151 0.816664 1.35357 0.802742 1.13034 1.00471C0.906907 1.20669 0.892512 1.5483 1.09823 1.76778L5.59523 6.56387Z"
                        />
                      </svg>
                      <span
                        className="a11y-only"
                      >
                        show menu for 
                        Test A
                      </span>
                    </button>
                  </div>
                  <div
                    data-reach-menu=""
                    data-reach-menu-popover=""
                    hidden={true}
                  >
                    <div
                      aria-labelledby="menu-button--menu--11"
                      className="subMenu"
                      data-reach-menu-items=""
                      data-reach-menu-list=""
                      id="menu--11"
                      onKeyDown={[Function]}
                      tabIndex={-1}
                    >
                      <div
                        role="none"
                        tabIndex={-1}
                      >
                        <a
                          className="menuLink"
                          data-reach-menu-item=""
                          data-reach-menu-link=""
                          data-selected=""
                          data-valuetext=""
                          href="/contentful-a"
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseMove={[Function]}
                          onMouseUp={[Function]}
                          role="menuitem"
                          tabIndex={-1}
                        >
                          Contentful a
                        </a>
                      </div>
                      <div
                        role="none"
                        tabIndex={-1}
                      >
                        <a
                          className="menuLink"
                          data-reach-menu-item=""
                          data-reach-menu-link=""
                          data-selected=""
                          data-valuetext=""
                          href="/contentful-b"
                          onClick={[Function]}
                          onDragStart={[Function]}
                          onMouseDown={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onMouseMove={[Function]}
                          onMouseUp={[Function]}
                          role="menuitem"
                          tabIndex={-1}
                        >
                          Contentful B
                        </a>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  className="menuItem"
                >
                  <div
                    className="navLabel"
                  >
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </div>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="tools"
          >
            <div
              className="searchContainer"
            >
              <div
                className="search"
                onBlur={[Function]}
              >
                <div
                  data-reach-combobox=""
                >
                  <input
                    aria-autocomplete="both"
                    aria-controls="listbox--6"
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    autoComplete="off"
                    className="searchInput"
                    data-reach-combobox-input=""
                    id="header-search-autocomplete"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="combobox"
                    tabIndex="-1"
                    value=""
                  />
                  <label
                    className="searchLabel"
                    htmlFor="header-search-autocomplete"
                  >
                    Search
                  </label>
                </div>
                <button
                  aria-label="Submit search"
                  className="searchSubmit"
                  onClick={[Function]}
                  type="button"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="test-file-stub"
                  />
                </button>
              </div>
            </div>
            <a
              className="getInvolved"
              href="/contact/volunteer"
            >
              Get involved
            </a>
          </div>
        </div>
        <div
          className="atlanticBanner"
        >
          <span>
            At
          </span>
           
          <img
            alt="The Atlantic"
            src="test-file-stub"
          />
          <div />
        </div>
      </div>
      <div
        className="container container"
      >
        <div
          className="full"
        >
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle"
              >
                Another title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>,
  <main
    id="main"
  >
    <div
      data-reach-skip-nav-content=""
      id="reach-skip-nav"
    />
    <div
      className="container container"
    >
      <div
        className="full"
      >
        <p>
          Content
        </p>
      </div>
    </div>
  </main>,
  <footer
    className="wrapper"
  >
    <div
      className="footer"
    >
      <div
        className="main"
      >
        <a
          className="ctpLogo"
          href="/"
        >
          <img
            alt="The COVID Tracking Project"
            className="projectLogo"
            src="test-file-stub"
          />
        </a>
        <div
          className="links"
        >
          <ul
            className="footerList"
          >
            <li>
              <a
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li>
              <a
                href="/terms-and-conditions"
              >
                Terms and Conditions
              </a>
            </li>
            <li>
              <a
                href="/about-data/license"
              >
                License
              </a>
            </li>
            <li>
              <a
                href="https://www.theatlantic.com/privacy-policy/"
              >
                Privacy Policy
              </a>
            </li>
            <li>
              <a
                href="/about/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li>
              <a
                href="/rss.xml"
              >
                RSS
              </a>
            </li>
          </ul>
        </div>
        <ul
          className="social"
        >
          <li>
            <a
              href="https://github.com/COVID19Tracking"
            >
              <img
                alt="GitHub"
                src="test-file-stub"
              />
            </a>
          </li>
          <li>
            <a
              href="https://twitter.com/COVID19Tracking"
            >
              <img
                alt="Twitter"
                src="test-file-stub"
              />
            </a>
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="divider"
    />
    <div
      className="copyright"
    >
      <span>
        CovidTracking.com Copyright © 
        2020
         by The Atlantic Monthly Group. 
        <a
          href="/license"
        >
          (CC BY-NC 4.0)
        </a>
      </span>
      <a
        className="backToTop"
        href="#reach-skip-nav"
      >
        <span>
          Back to top
        </span>
        <img
          alt=""
          aria-hidden={true}
          src="test-file-stub"
        />
      </a>
    </div>
  </footer>,
]
`;
